fix: unit test sonar fixes